gcc/testsuite/rust/rustc/ui/span/E0535.rs
#[inline(unknown)] // { dg-error ".E0535." "" { target *-*-* } }
pub fn something() {}

fn main() {
    something();
}

